--- a/asset/style/wishlist.css
+++ b/asset/style/wishlist.css
@@ -202,7 +202,7 @@ body {
   gap: 20px;
   padding: 20px;
   max-width: 100%;
-  background-color: #fff;
+  /* background-color: #fff; */
   box-shadow: 0 0 8px rgba(28, 27, 27, 0.1);
   scroll-behavior: smooth;
   scrollbar-width: none; /* Firefox */
