--- a/asset/style/product.css
+++ b/asset/style/product.css
@@ -632,15 +632,13 @@ box-shadow: #000;
 }
 
 .card {
-  width: 100%; /* Fixed width to match screenshot */
-  border: 1px solid #ccc;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  font-family: Arial, sans-serif;
-  transition: box-shadow 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background: #fff;
+  border-radius: 0 !important;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  overflow: hidden;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  margin: 0 auto 8px auto;
+  padding-bottom: 6px !important;
 }
 
 .card:hover {
@@ -679,7 +677,7 @@ box-shadow: #000;
   margin: 10px 0;
   font-size: 15px;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform: capitalize !important;
 }
 
 /* Align price buttons + wishlist in a row */
@@ -703,19 +701,22 @@ box-shadow: #000;
 }
 
 .mrp {
-  background-color: #007bff;
-  color: white;
+  border: 1px solid #007bff;
+  color: #007bff;
+  background: none !important;
   text-decoration: line-through;
 }
 
 .pay {
-  background-color: #28a745;
-  color: white;
+  border: 1px solid #28a745;
+  color: #28a745;
+  background: none !important;
 }
 
 /* Wishlist inside price-buttons */
 .wishlist {
-  background-color: #007bff;
+  border: 1px solid #DE0085;
+  background: none !important;
   border-radius: 6px;
   width: 36px;
   height: 36px;
